Add Bread ingredients
Can't make food without the ingredients

--- a/recipes/Bread.html
+++ b/recipes/Bread.html
@@ -2,3 +2,10 @@
 <img src="../images/bread.jpg" alt="Sourdough bread" height="150px">
 <h2>Description</h2>
 <p>It's sourdough bread. The pandemic made it quite popular and to be honest, who doesn't love carbs and gluten?</p>
+<h2>Ingredients</h2>
+<ul>
+    <li>50 grams active starter</li>
+    <li>350 grams warm water</li>
+    <li>500 grams all-purpose or bread flour</li>
+    <li>10 grams salt</li>
+</ul>
