--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <ul>
             <li><a href="./recipes/Bread.html">Bread</a></li>
+            <li><a href="./recipes/baked_Alaska.html">Baked Alaska</a></li>
         </ul>
     </body>
 </html>
