--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/Bread.html">Bread</a></li>
             <li><a href="./recipes/baked_Alaska.html">Baked Alaska</a></li>
+            <li><a href="./recipes/pretzel.html">Pretzels</a></li>
         </ul>
     </body>
 </html>
