Added some style and color

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
         <ul>
-            <li><a href="./recipes/Bread.html">Bread</a></li>
-            <li><a href="./recipes/baked_Alaska.html">Baked Alaska</a></li>
-            <li><a href="./recipes/pretzel.html">Pretzels</a></li>
+            <li class="recipe"><a href="./recipes/Bread.html" class="recipe_item">Bread</a></li>
+            <li class="recipe"><a href="./recipes/baked_Alaska.html" class="recipe_item">Baked Alaska</a></li>
+            <li class="recipe"><a href="./recipes/pretzel.html" class="recipe_item">Pretzels</a></li>
         </ul>
     </body>
 </html>
